--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,12 +3,12 @@ server:
   forward-headers-strategy: native
 
 spring:
-  profiles:
-    active: dev  # 기본 프로파일을 dev로 설정
-  
   config:
-    import: optional:file:.env[.properties]   # .env ????
-
+    import: optional:file:.env[.properties]
+  
+  profiles:
+    active: dev
+  
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/SeasonThon?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
@@ -22,7 +22,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update   # create ? update (?? ?? ??? ??? ??)
+      ddl-auto: create-drop  # 개발환경에서 매번 새로 생성
     show-sql: true
     defer-datasource-initialization: true
     properties:
@@ -39,12 +39,12 @@ spring:
             client-secret: ${GOOGLE_CLIENT_SECRET}
             scope: profile, email
             authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"   # ???
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
           naver:
             client-id: ${NAVER_CLIENT_ID}
             client-secret: ${NAVER_CLIENT_SECRET}
             authorization-grant-type: authorization_code
-            redirect-uri: "${BASE_URL}/login/oauth2/code/{registrationId}" # ?? / ??
+            redirect-uri: "${BASE_URL}/login/oauth2/code/{registrationId}"
             scope: name, email, profile_image
             client-name: Naver
           kakao:
@@ -52,7 +52,7 @@ spring:
             client-secret: ${KAKAO_CLIENT_SECRET}
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
-            redirect-uri: "${BASE_URL}/login/oauth2/code/{registrationId}" # ?? / ??
+            redirect-uri: "${BASE_URL}/login/oauth2/code/{registrationId}"
             scope: profile_nickname, profile_image
             client-name: Kakao
         provider:
@@ -68,7 +68,6 @@ spring:
             user-name-attribute: id
 
 jwt:
-  # .env? JWT_SECRET? ??? JWT_SECRET_KEY? ???? ??
   secret: mySecretKey123456789012345678901234567890
   expiration:
     access: 3600000
@@ -81,21 +80,9 @@ oauth2:
       signup: /oauth/signup
       auth: /oauth/authenticated
 
-product:
-  sync:
-    cron: "0 0 * * * *"
-
-odcloud:
-  base-url: https://api.odcloud.kr
-  service:
-    key: ${ODCLOUD_SERVICE_KEY:}
-
-firebase:
-  web:
-    vapid-key: BOx7rbfSOiX3dyVWlgmslQAoV6s2vTYWYHFRhR8t4YNGTS9no9UA_3We8j6TithuJue5dCxXKAKiTYGkh0Y0bIg
-
-xai:
-  api:
-    key: ${XAI_API_KEY:}
-  model: grok-3
-  base-url: https://api.x.ai/v1
+# 로깅 설정
+logging:
+  level:
+    com.kbsw.seasonthon: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
